--- a/css/style.css
+++ b/css/style.css
@@ -11,44 +11,58 @@ regular 400*/
   box-sizing:border-box;
 }
 body{
-  font-family: 'Source Sans Pro', sans-serif;  
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-top: 0px;
+  font-size: 0px;
 }
-header{
+
+a {
+  text-decoration: none
+}
+
+#logo {
+  width: 150px;
+  height: auto;
+}
+
+#wrapper {
+  margin: 0 auto;
+  font-size: 0px;
+}
+
+#static {
+  z-index:2;
+  height:100px;
+  position: fixed;
+  width: 100%;
+}
+
+header {
   overflow:hidden;
   background-color: #f4f4f4;
+}
+
+#container {
   position: relative;
-/*  width: 100%;
-  position: fixed;
-  padding-top: none;*/
-}
-
-#container{
-/*  position: relative;
-  max-width: 960px;
-  float: center;*/
-}
-
-#name {
-  float: left;
-  font-weight: 900;
-  color: #463768;
-  padding: 0px 50px;
-  font-size: 50px;
+  top: 140px;
 }
 
 nav {
   float: right;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-right: 40px;
 }
 
-ul li {
+header ul li {
   display: inline-block;
-  border: solid 1px #c0b283;
-  background-color: #f4f4f4;
+  border: solid 1px #f4f4f4;
+  background-color: #463768;
 }
 ul li a{  
   display: inline-block;
   padding: 10px 5px;
-  color: #c0b283;
+  color: #f4f4f4;
   size: 14px;
   text-decoration: none;
 }
@@ -69,7 +83,7 @@ nav ul li:first-child{
 .line{
   width: 1.2em;
   height: 3px;
-  background: #c0b283;
+  background: #463768;
   margin-top: 0.25em;
 }
 
@@ -81,19 +95,27 @@ nav ul li:first-child{
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 #welcome {
   color: #f4f4f4;
   font-size: 40px;
-  padding: 400px 10px;
+  padding: 450px 50px;
   margin-top: 0px;
   width: 66%;
+  font-family: 'Euphoria Script', cursive;
+}
+
+#name {
+  font-size:60px;
 }
 
 #resume {
-  background-color: #f4f4f4;
+  background-color: rgb(55,55,55);
   height: 60%;
+  margin-top: -50px;
+  z-index:;
 }
 
 
@@ -102,14 +124,16 @@ nav ul li:first-child{
 .main {
   width: 80%;
   margin-left: 10%;
-
+  position: relative;
 }
 
 h2 {
   font-weight: 900;
-  font-size: 3em;
   color: #c0b283;
-  padding-left: 15px
+  font-family: 'Euphoria Script', cursive;
+  padding-left: 50px;
+  padding-top: 50px;
+  font-size: 50px;
 }
 
 
@@ -124,13 +148,13 @@ h2 {
   position: absolute;
   width: 5px;
   height: 100%;
-  top: 0;
+  top: 0px;
   left: 165px;
 }
 
 .event {
   position: relative;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
   padding-right: 40px;
 }
 
@@ -139,7 +163,7 @@ h2 {
   width: 100px;
   height: 100px;
   box-shadow: 
-    0 0 0 8px #c0b283, 
+    0 0 0 8px #463768, 
     0 1px 1px #f4f4f4;
   background-repeat: no-repeat;
   border-radius: 50%;
@@ -162,7 +186,7 @@ h2 {
 }
 
 .thumb span {
-  color: #c0b283; 
+  color: #f4f4f4; 
   width: 100%;
   text-align: center;
   font-weight: 700;
@@ -217,7 +241,7 @@ h2 {
   content: '\e702';
   background: #fff;
   border-radius: 50%;
-  color: #c0b283;
+  color: #463768;
   font-size: 26px;
   height: 100%;
   width: 100%;
@@ -272,9 +296,9 @@ h2 {
 .content-inner {
   position: relative;
   padding: 20px;
-  color: #373737;
+  color: #c0b283;
   border: none;
-  border-left: 5px solid #c0b283;
+  border-left: 5px solid #463768;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   background: #f4f4f4;
 }
@@ -282,7 +306,7 @@ h2 {
 .content-inner h3 {
   font-size: 26px;
   padding: 5px 0 5px 0;
-  color: #c0b283;
+  color: #463768;
 }
 
 .content-inner p {
@@ -302,7 +326,7 @@ h2 {
   position: absolute;
   width: 30px;
   height: 30px;
-  color: #c0b283;
+  color: #463768;
   left: -22px;
   top: 19px;
   z-index: -1;
@@ -352,16 +376,16 @@ h2 {
 
 .event input[type="radio"]:checked + label:after {
   content: '\2726';
-  color: #373737;
+  color: #c0b283;
   box-shadow: 0 0 0 5px #f4f4f4;
 }
 
 .event input[type="radio"]:checked ~ .content-perspective:before {
-  background: #373737;
+  background: #c0b283;
 }
 
 .event input[type="radio"]:checked ~ .content-perspective .content-inner h3 {
-  color: #373737;
+  color: #c0b283;
 }
 
 .event input[type="radio"]:checked ~ .content-perspective .content {
@@ -373,13 +397,13 @@ h2 {
 }
 
 .event input[type="radio"]:checked ~ .content-perspective .content-inner {
-  border-color: #373737;
+  border-color: #c0b283;
   box-shadow: 10px 0px 10px -6px rgba(0, 0, 0, 0.1);
 }
 
 .event input[type="radio"]:checked ~ .content-perspective .content-inner p {
   max-height: 260px; /* Add media queries */
-  color: rgba(0,0,0,0.6);
+  color: #c0b283;
   -webkit-transition-delay: 0s, 0.6s;
   -moz-transition-delay: 0s, 0.6s;
   -o-transition-delay: 0s, 0.6s;
@@ -388,7 +412,7 @@ h2 {
 }
 
 .event input[type="radio"]:checked ~ .content-perspective .content-inner:before {
-  color: #373737;
+  color: #c0b283;
 }
 
 .event input[type="radio"]:checked ~ .thumb {
@@ -398,12 +422,12 @@ h2 {
   -ms-transform: scale(1);
   transform: scale(1);
   box-shadow: 
-    0 0 0 8px #373737, 
+    0 0 0 8px #c0b283, 
     0 1px 1px #f4f4f4;
 }
 
 .event input[type="radio"]:checked ~ .thumb span {
-  color: #373737;
+  color: #c0b283;
 }
 
 .event input[type="radio"]:checked ~ .thumb:before {
@@ -495,11 +519,11 @@ h2 {
 
   .content-inner {
     border-left: none;
-    border-top: 5px solid #c0b283;
+    border-top: 5px solid #463768;
   }
 
   .event input[type="radio"]:checked ~ .content-perspective .content-inner {
-    border-color: #373737;
+    border-color: #c0b283;
     box-shadow: 0 10px 10px -6px rgba(0, 0, 0, 0.1);
   }
 
@@ -521,9 +545,19 @@ end resume css*/
 
 
 #portfolio {
-  background-color: #373737;
+  background-color: #c0b283;
   align-content: center;
   overflow: hidden;
+  position: relative;
+}
+
+h4 {
+  padding-left: 50px;
+  margin: 40px;
+  font-size: 50px;
+  font-size: 50px;
+  font-family: 'Euphoria Script', cursive;
+  color: #f4f4f4;
 }
 
 
@@ -531,7 +565,7 @@ end resume css*/
 .modal {
     display: none;
     position: fixed; 
-    z-index: 1; 
+    z-index: 2; 
     padding-top: 100px; 
     left: 0;
     top: 0;
@@ -540,18 +574,18 @@ end resume css*/
     overflow: auto;
     background-color: #373737;
     background-color: rgba(0,0,0,0.4); 
+    font-size: 20px;
 }
 
-/* Modal Content */
 .modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    text-align: center;
 }
 
-/* The Close Button */
 .close {
     color: #aaaaaa;
     float: right;
@@ -566,25 +600,44 @@ end resume css*/
     cursor: pointer;
 }
 
+.modalImage {
+  width: 80%;
+  height: auto;
+  border: 1px solid black;
+  margin-left: 2%;
+}
+
+
 /*End Modal CSS*/
 
 #clipDivOne {
- background-image: url(https://previews.123rf.com/images/arcady31/arcady311108/arcady31110800017/10101139-Sample-stamp-Stock-Photo-rubber.jpg);
+ background-image: url(../images/clips/seafood-clip.png);
   background-size: cover;
 }
 
+#clipDivOne:hover {
+ background-image: url(../images/clips/seafood-hover.png);
+}
+
 #clipDivTwo {
- background-image: url(https://previews.123rf.com/images/arcady31/arcady311108/arcady31110800017/10101139-Sample-stamp-Stock-Photo-rubber.jpg);
+ background-image: url(../images/clips/rockpaperscissors-clip.png);
   background-size: cover;
   margin-left: 0%;
   margin-right: 0%;
 }
 
+#clipDivTwo:hover {
+ background-image: url(../images/clips/rockpaperscissors-hover.png);
+}
+
 #clipDivThree {
-  background-image: url(https://previews.123rf.com/images/arcady31/arcady311108/arcady31110800017/10101139-Sample-stamp-Stock-Photo-rubber.jpg);
+  background-image: url(../images/clips/portfolio-clip.png);
   background-size: cover;
 }
 
+#clipDivThree:hover {
+ background-image: url(../images/clips/portfolio-hover.png);
+}
 
 .clip {
   height: 300px;
@@ -594,19 +647,12 @@ end resume css*/
   margin-left: 2.5%;
   margin-right: 2.5%;
   margin-bottom: 2.5%;
- /* background-color: #f4f4f4;*/
 }
 
-/*.clip:nth-of-type(2) {
-  margin-left: 0px;
-  margin-right: 0px;
-}*/
-
-h4 {
-  color: #f4f4f4;
-  font-size: 30px;
-  padding-left: 5%;
-}
+  .clip:nth-of-type(2) {
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  }
 
 
 aside {
@@ -617,24 +663,33 @@ aside {
 #inspiration {
   color: #463768;
   font-size: 40px;
-  padding: 10px 10px;
+  padding: 50px 100px;
   margin-top: 0px;
-  font-weight: 600;
-  font-style: italic;
+  font-family: 'Euphoria Script', cursive;
+  text-align: center;
 }
+
+#friends {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 15px;
+  text-decoration: none;
+}
+
 
 footer {
-  height: 50px;
+  height: 75px;
   background-color: #463768;  
+  padding-top: 20px;
+  font-size: 12px;
+  font-weight: 400;
+  text-align: center;
+  color: #f4f4f4;
 }
 
-h7 {
-  color: #f4f4f4;
-  padding-left: 5px;
-  padding-top: 20px;
-  padding-bottom: 5px;
-  font-size: 10px;
-  font-weight: 400;
+#linkedin {
+  height: 15px;
+  width: auto;
+  margin-top: 10px;
 }
 
 h7 a {
@@ -650,9 +705,17 @@ h7 a {
   }
 
   #name {
-    font-size: 30px;
-    float: none;
-    padding-left: 20px;
+  font-size:40px;
+ }
+
+  #logo {
+  width: 75px;
+  height: auto;
+  }
+
+  #container {
+  position: relative;
+  top: 70px;
   }
 
   #hero {
@@ -663,10 +726,22 @@ h7 a {
     float: none;
   }
 
+  h2 {
+  padding-left: 30px;
+  padding-top: 50px;
+  font-size: 30px;
+  }
+
+  h4 {
+  padding-left: 10px;
+  padding-top: 0px;
+  font-size: 30px;
+  }
+
   .line {
     width: 1.2em;
     height: 3px;
-    background: #c0b283;
+    background: #463768;
     margin-top: 0.25em;
   }
 
@@ -693,7 +768,7 @@ h7 a {
     margin: 5px 10%;
     width: 70%;
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
     }
 
   header nav ul li a {
@@ -709,32 +784,42 @@ h7 a {
   }
 
   nav.show {
-    height: 20em;
+    height: 15em;
   }
 
   .clip {
     width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-bottom: 2.5%;
   }
 
   .clip:nth-of-type(2) {
   margin-left: 2.5%;
-  margin-right: 2.5%;
+  margin-right: none;
   }
 
   #welcome {
   color: #f4f4f4;
-  font-size: 1.5em;
-  padding: 100px 10px;
+  font-size: 30px;
+  padding: 250px 40px;
   margin-top: 0px;
   }
 
   #inspiration {
   color: #463768;
-  font-size: 1.5em;
-  padding: 10px 10px;
+  font-size: 20px;
+  padding: 30px 30px;
   margin-top: 0px;
-  font-weight: 600;
-  font-style: italic;
+  }
+
+  #friends {
+  font-size: 10px;
+  }
+
+
+  .modal {
+    font-size: 10px;
 }
 
 
@@ -749,7 +834,7 @@ h7 a {
 }
 
 #welcome {
-  padding: 200px 10px;
+  padding: 300px 10px;
 }
 
 }
@@ -761,7 +846,7 @@ h7 a {
 }
 
 #welcome {
-  padding: 50px 10px;
+  padding: 150px 20px;
 }
 
 }
